# gh-automation-funda

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Makefile.ci  Makefile.migrations  README.md  pyproject.toml  yoyo.ini
.github/workflows/: run-task.yml  run-tests.yml
docs/: er_diagram.md
gh_automation_base/: __init__.py  cli.py
gh_automation_base/persistence/: init.py
gh_automation_base/pipelines/: __init__.py  etl.py  quotes.py
gh_automation_funda/: __init__.py  cli.py  config.py
gh_automation_funda/libs/: __init__.py  models.py
gh_automation_funda/libs/logic/: __init__.py  funda.py
gh_automation_funda/libs/scrapers/: funda.py  kadasterdata.py  wozwaardeloket.py
gh_automation_funda/persistence/: __init__.py  dsn.py  init.py  settings.py
gh_automation_funda/pipelines/: etl.py  funda.py
migrations/: gh_auto_20230827_01_ZYZvf.sql  gh_auto_20230903_01_2RSsI.sql  gh_auto_20231110_01_B6eTY.sql
stubs/yoyo/: __init__.pyi  migrations.pyi
stubs/yoyo/backends/: __init__.pyi
